base build created

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,20 +23,20 @@ functions:
       - http: ANY /
       - http: 'ANY {proxy+}'
 
-resources:
-  Resources:
-    DynamoDbTable:
-      Type: 'AWS::DynamoDB::Table'
-      Properties:
-        AttributeDefinitions:
-          -
-            AttributeName: user_id
-            AttributeType: S
-        KeySchema:
-          -
-            AttributeName: user_id
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
-        TableName: "${self:provider.stage}-ddb-diagnosis"
+# resources:
+#   Resources:
+#     DynamoDbTable:
+#       Type: 'AWS::DynamoDB::Table'
+#       Properties:
+#         AttributeDefinitions:
+#           -
+#             AttributeName: user_id
+#             AttributeType: S
+#         KeySchema:
+#           -
+#             AttributeName: user_id
+#             KeyType: HASH
+#         ProvisionedThroughput:
+#           ReadCapacityUnits: 1
+#           WriteCapacityUnits: 1
+#         TableName: "${self:provider.stage}-ddb-diagnosis"
