--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,18 @@ provider:
   stage: dev
   region: ap-northeast-1
   profile: ${opt:profile, self:custom.defaultProfile}
+  iamRoleStatements:
+  - Effect: Allow
+    Action:
+      - dynamodb:DescribeTable
+      - dynamodb:Query
+      - dynamodb:Scan
+      - dynamodb:GetItem
+      - dynamodb:PutItem
+      - dynamodb:UpdateItem
+      - dynamodb:DeleteItem
+    Resource: "arn:aws:dynamodb:*"
+
 
 package:
  exclude:
@@ -35,20 +47,21 @@ functions:
           method: post
           cors: true
 
-# resources:
-#   Resources:
-#     DynamoDbTable:
-#       Type: 'AWS::DynamoDB::Table'
-#       Properties:
-#         AttributeDefinitions:
-#           -
-#             AttributeName: user_id
-#             AttributeType: S
-#         KeySchema:
-#           -
-#             AttributeName: user_id
-#             KeyType: HASH
-#         ProvisionedThroughput:
-#           ReadCapacityUnits: 1
-#           WriteCapacityUnits: 1
-#         TableName: "${self:provider.stage}-ddb-diagnosis"
+resources:
+  Resources:
+    DynamoDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        AttributeDefinitions:
+          -
+            AttributeName: user_id
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: user_id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        # TableName: "${self:provider.stage}-ddb-diagnosis"
+        TableName: "Test"
