--- a/serverless.yml
+++ b/serverless.yml
@@ -64,4 +64,20 @@ resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         # TableName: "${self:provider.stage}-ddb-diagnosis"
-        TableName: "Test"
+        TableName: "data_table"
+    SessionDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        AttributeDefinitions:
+          -
+            AttributeName: user_id
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: user_id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        # TableName: "${self:provider.stage}-ddb-sessions"
+        TableName: "session_table"
